[gd_scene load_steps=7 format=3 uid="uid://c2dyutb22u6x8"]

[ext_resource type="Script" uid="uid://2hyltc7plhdl" path="res://Code/Scenes/Fundies/UIActions.gd" id="1_ddjd7"]
[ext_resource type="Theme" uid="uid://bfw6ylcttychc" path="res://Themes/Themes/AverageButton.tres" id="2_2xlbq"]
[ext_resource type="StyleBox" uid="uid://dbxi0dyaybdu1" path="res://Themes/StyleBoxes/RED.tres" id="3_2xlbq"]
[ext_resource type="Texture2D" uid="uid://dmlnngpyb3if" path="res://Art/ETCIcons/Pokebody.png" id="4_u4me3"]
[ext_resource type="Texture2D" uid="uid://ct1rslwcfpy1y" path="res://Art/ETCIcons/Pokepower.png" id="5_wykc7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l8jgp"]

[node name="UIActions" type="Node"]
script = ExtResource("1_ddjd7")
ability_ani_offset = Vector2(-24, 0)
ability_ani_time = 2.5

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_right = 1.003
anchor_bottom = 1.015
offset_left = -11.0
offset_top = -10.0
offset_right = 7.76001
offset_bottom = 2.19995
mouse_filter = 2
color = Color(0, 0, 0, 0.614)
metadata/_edit_use_anchors_ = true

[node name="AskInstructions" type="PanelContainer" parent="ColorRect"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.404)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 11.0
offset_top = 10.0
offset_right = -33.0
offset_bottom = 59.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("2_2xlbq")

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/AskInstructions"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/AskInstructions/HBoxContainer"]
custom_minimum_size = Vector2(73, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_2xlbq")

[node name="CancelText" type="RichTextLabel" parent="ColorRect/AskInstructions/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[center]Esc to Go Back"

[node name="Instructions" type="RichTextLabel" parent="ColorRect/AskInstructions/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 33
bbcode_enabled = true
text = "[center]Select A Pokemon"

[node name="AbilityActivate" type="PanelContainer" parent="ColorRect"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 11.0
offset_top = 10.0
offset_right = 51.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_l8jgp")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/AbilityActivate"]
layout_mode = 2

[node name="AbilityTab" type="TabContainer" parent="ColorRect/AbilityActivate/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
current_tab = 1
tabs_visible = false

[node name="Body" type="TextureRect" parent="ColorRect/AbilityActivate/VBoxContainer/AbilityTab"]
visible = false
layout_mode = 2
texture = ExtResource("4_u4me3")
metadata/_tab_index = 0

[node name="Power" type="TextureRect" parent="ColorRect/AbilityActivate/VBoxContainer/AbilityTab"]
layout_mode = 2
texture = ExtResource("5_wykc7")
metadata/_tab_index = 1

[node name="AbilityName" type="RichTextLabel" parent="ColorRect/AbilityActivate/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
bbcode_enabled = true
text = "Hello eeverybody my name is markiplier"
fit_content = true
visible_characters_behavior = 1
